--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,7 @@ layout: default
 
 {% if page._styles %}
 <!-- Page/Post style -->
-<style type="text/css">
-  {{ page._styles }}
-</style>
+<style type="text/css">{{ page._styles }}</style>
 {% endif %}
 
 <div class="post">
@@ -41,11 +39,6 @@ layout: default
 
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
-    <div id="table-of-contents">
-      {% toc %}
-    </div>
-    <hr>
-    {% endif %}
     <div id="markdown-content">
       {{ content }}
     </div>
